test/files/neg/t4225.check
t4225.scala:19: error: could not find implicit value for parameter b: _1.f0.Bar
  f.op0
    ^
t4225.scala:20: error: could not find implicit value for parameter b: _1.f0.Bar
  f.op1(23)
       ^
two errors found
